<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_al_back"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:background="@drawable/back"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="登录"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_la_register"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="注册"
            android:textSize="14sp"
            android:textColor="#64D5C0"
            android:layout_marginRight="15dp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/editRel"
                android:layout_marginTop="30dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <RelativeLayout
                    android:id="@+id/accountRel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:clickable="true"
                    android:background="@drawable/login_border"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/account"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/et_al_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dip"
                        android:layout_toRightOf="@id/account"
                        android:background="@null"
                        android:hint="@string/account_hint"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/pwdRel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/accountRel"
                    android:background="@drawable/login_border"
                    android:clickable="true"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/pwd"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/et_al_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dip"
                        android:layout_toRightOf="@id/pwd"
                        android:background="@null"
                        android:hint="@string/pwd"
                        android:textSize="15sp" />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pwdRel"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="7dp"
                    android:textSize="12sp"
                    android:textColor="#FF0000"
                    android:text="账号或密码错误"/>
            </RelativeLayout>

            <Button
                android:id="@+id/bt_al_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#64D5C0"
                android:text="登录"/>

            <TextView
                android:id="@+id/tv_al_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/forget_pwd"
                android:textColor="#909090" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="2dp"
                    android:background="#BDBDBD"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14sp"
                    android:textColor="#666666"
                    android:text="@string/login_massage"/>
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="2dp"
                    android:background="#BDBDBD"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:id="@+id/tv_wechat"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/btn_wechat"/>
                <ImageView
                    android:id="@+id/iv_sina"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/btn_sina"/>
                <ImageView
                    android:id="@+id/iv_qq"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/btn_qq"/>
                <ImageView
                    android:id="@+id/iv_facebook"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/btn_facebook"/>
                <ImageView
                    android:id="@+id/iv_twitter"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/btn_twitter"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>